--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>NFL Play By Play {% block title %}// {% endblock %}</title>
+	<title>{% block title %} {% endblock %}</title>
 	{% block css %}
 	{% endblock %}
 </head>
