--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+NFL Seasons for Play by Play
+{% endblock %}
+
 {% block content %}
 	<ul>
 		{% for season in seasons %}
