--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>{% block title %} {% endblock %}</title>
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	{% block css %}
 	{% endblock %}
 </head>
 <body>
+	<div class="container">
 	{% block content %}{% endblock %}
+	</div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
