Code restructing for redis and celery

--- a/templates/playbyplay.html
+++ b/templates/playbyplay.html
@@ -101,3 +101,7 @@
       <input type="hidden" id="game_data_url" value="/{{ season }}/{{ gameid }}">
    	</div>
 {% endblock %}
+
+{% block js %}
+  <script src="/static/js/base.js"></script>
+{% endblock %}
