Login Cookies and Session

--- a/templates/stats_header_table.html
+++ b/templates/stats_header_table.html
@@ -7,6 +7,7 @@
 	{% if stats == 'receiving' %}
 		<th scope="col"><a class="header_click" href="?sort=receiver">Receiver</a></th>
 	{% endif %}
-	<th scope="col"><a class="header_click" href="?sort=td_count">Touchdowns</a></th>
 	<th scope="col"><a class="header_click" href="?sort=team">Team</a></th>
+	<th scope="col"><a class="header_click" href="?sort=total_yards">Total Yards</a></th>
+	<th scope="col"><a class="header_click" href="?sort=td_count">Touchdowns</a></th>
 	<th scope="col"><a class="header_click" href="?sort=longest_td">Longest TD</a></th>
