--- a/templates/statsgame.html
+++ b/templates/statsgame.html
@@ -7,10 +7,10 @@ NFL Stats and Games for {{season}} Season
 {% block content %}
 	<h2>NFL Stats and Play by Play Data for {{season}} Season</h2>
 	<ul>
-		<li><a href="/{{season}}/stats/rushing">Rushing</a></li>
-		<li><a href="/{{season}}/stats/passing">Passing</a></li>
-		<li><a href="/{{season}}/stats/receiving">Receiving</a></li>
-		<li><a href="/{{season}}/all-games">All Games Play by Play</a></li>
+		<li><a href="/{{season}}/stats/rushing/">Rushing</a><a href="/stats/{{season}}/rushing/charts/">(charts)</a></li>
+		<li><a href="/{{season}}/stats/passing/">Passing</a><a href="/stats/{{season}}/passing/charts/">(charts)</a></li>
+		<li><a href="/{{season}}/stats/receiving/">Receiving</a><a href="/stats/{{season}}/rushing/charts/">(charts)</a></li>
+		<li><a href="/{{season}}/all-games/">All Games Play by Play</a></li>
 	</ul>
 	
 {% endblock %}
