--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,8 @@
+<html>
+<body>
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+</head>  
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul class=flashes>
@@ -15,3 +20,5 @@
 	<input type="password" name="password">
 	<input type="submit" name="Login">
 </form>
+</body>
+</html>
